# AI_diary

./: .gitignore  README.md  app.py  package-lock.json
backcke/: app.py  db.py  pyproject.toml
backcke/module/: create_summary.py  db.py  emotion.py  train.py
fronet-ts/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
fronet-ts/src/: index.html  mockApi.ts  mockData.ts
fronet-ts/src/scripts/: api.ts  d3-girrafe.ts  main.ts  utils.ts
fronet-ts/src/templates/: depression-sos.twig  diary-create.twig  diary-detail.twig  diary-list.twig  emotion-trends.twig  home.twig  index.twig  login.twig  my-page.twig  profile-info.twig  register.twig  weekly-summary.twig
